<?xml version="1.0"?>
<package format="3">
  <name>vantage_dmx</name>
  <version>0.1.0</version>
  <description>DMX control via OLA</description>
  <maintainer email="dev@vantage.local">Vantage</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-ola</exec_depend>
</package>
