<?xml version="1.0"?>
<package format="3">
  <name>vantage_timecode</name>
  <version>0.1.0</version>
  <description>LTC decode to ROS 2</description>
  <maintainer email="dev@vantage.local">Vantage</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
